Set minimum content height to prevent cutoff of absolute content (https://github.com/woocommerce/woocommerce-admin/pull/1166)
* Set minimum content height to prevent cutoff of absolute content

* Add admin bar height vars for SCSS and apply them

--- a/plugins/woocommerce-admin/client/stylesheets/abstracts/_variables.scss
+++ b/plugins/woocommerce-admin/client/stylesheets/abstracts/_variables.scss
@@ -23,3 +23,7 @@ $light-gray-500: $core-grey-light-500;
 $dark-gray-300: $core-grey-dark-300;
 $dark-gray-900: $core-grey-dark-900;
 $alert-red: $error-red;
+
+// WordPress defaults
+$adminbar-height: 32px;
+$adminbar-height-mobile: 46px;
